css/writing-style.css
* {
    margin: 0px;
    padding: 0px;
    box-sizing: border-box;
    list-style: none;
}

body {
    font-family: Signika, sans-serif;
}

/***** Writing Page *****/

.top-text {
    margin: 0;
    color: gray;
    font-weight: 300;
    letter-spacing: 0.7px;
    font-style: italic;
    padding-bottom: 15px;
}

.section-header {
    font-size: 20px;
    letter-spacing: 0.7px;
    margin: 0;
    padding-bottom: 5px;
}

.accordion {
    padding-top: 20px; /* create space at the top */
    max-width: 700px; /* define max width; is responsive! */
    margin: auto; /* to center the content */
}

.card-header {
    padding: 0; /*reduce (or change) padding around text in block*/
    padding-left: 15px;
    text-align: left;
}

.card-header:hover {
    cursor: pointer;
    filter: brightness (40%);
}

.card-header-secondary {
    color: #7C7C7C;
    font-weight: 300;
    padding-left: 0px;
}

.break-writing-block-header{
    display: none;
}

.card-header-secondary-small {
    color: #7C7C7C;
    font-weight: 300;
    display: none;
}

.card-shade-1 {
    background-color: #ECF5ED;
}

.card-shade-1:hover {
    background-color: #D7EAD8;
}

.card-shade-2 {
    background-color: #E8F4F8;
}

.card-shade-2:hover {
    background-color: #D0E9F1;
}

.card-shade-3 {
    background-color: #E6F4FF;
}

.card-shade-3:hover {
    background-color: #C2E4FF;
}

.card-shade-4 {
    background-color: #E3EBF1;
}

.card-shade-4:hover {
    background-color: #C9D8E4;
}

.btn p {
    color: black; /* make text black */
    font-size: 20px;
    margin: 0;
    letter-spacing: 0.8px;
    font-weight: 500;
    margin-bottom: -10px;
    text-align: left; /*important for subhead alignment on small screen */
}

.btn {
    text-decoration: none !important;
}

.block-spacing{
    padding-top: 10px;
}

.block-subhead {
    color: black;
    font-size: 16px;
    font-weight: 300;
    padding-left: 42px;
    margin: 0;
    padding-bottom: 10px;
}

.writing-block-icon {
    font-size: 20px;
    padding-right: 15px;
}

.writing-block-icon-open {
    font-size: 20px;
    padding-right: 10px;
}

/* icon when block collapsed */
.btn.collapsed .writing-block-icon {
    display: inline-block;
}

/* icon when block expanded */
.btn .writing-block-icon {
    display: none;
}

/* open icon when block collapsed */
.btn.collapsed .writing-block-icon-open {
    display:  none;
}

/* open icon when block expanded */
.btn .writing-block-icon-open {
    display: inline-block;
}


/* inside drop downs */
/* MIT Admissions Blogs */
/* make profile image a circle */
.image-avatar {
    max-width: 150px;
    height: auto;
    position: relative;
    overflow: hidden;
    padding-bottom: 20px;
}

/* make it right-aligned on large screens */
.image-align {
    text-align: center; /* change when page shrinks */
}

.column1 {
    width: 35%; /* number of columns */ /* change when page shrinks */

    padding-left: 25px; /* space between cards */
    padding-right: 25px;

    padding-top: 0px; /* change when page shrinks */
}
 
.column2 {
    width: 65%; /* number of columns */ /* change when page shrinks */

    padding-left: 25px; /* space between cards */
    padding-right: 25px;

    padding-top: 0px; /* change when page shrinks */
}

.row {
    max-width: 800px; /* change on smaller screen */
    position: relative;
    margin: auto; /* centers the content and automatically reduces the margin as the page changes */
}

.admissions-text {
    text-align: left;
    padding-bottom: 15px;
}

.admissions-text p {
    margin: 0;
    color: black;
    font-weight: 300;
}

.admissions-text a {
    text-decoration: none;
    color: black;
    font-weight: 300;
}

.tight-link {
    padding-bottom: 0px;
}

.admissions-text a:hover {
    color: #0075BA;
 
}
.admissions-text-icons {
    color: #C7CBB8;
    font-size: 20px;
    padding-right: 2px;
}

.admissions-text:hover .admissions-text-icons {
    color:#0075BA;
}

.blog-item{
    padding-bottom: 10px;
}

.blog-item a {
    color: black;
}

.blog-item a:hover {
    text-decoration: none;
    color: #0075BA;
}

.blog-title {
    margin: 0px;
    font-size: 16px;
    font-weight: 500;
}

.blog-title .a{
    color: black;
}

.blog-date {
    margin: 0;
    font-size: 14px;
    letter-spacing: 0.8px;
    font-weight: 300;
    color: grey;
}

.blog-subtitle {
    margin: 0;
    font-size: 14px;
    font-weight: 300;
    color: #89A6B7;
}

.data-vis {
    background: #E0F0E2;
}

.dropdown-section {
    padding-left: 35px;
    padding-right: 25px;
}

.computerworld-logo {
    max-width: 550px;
    padding-bottom: 20px;
}

@media screen and (max-width: 800px) {
    /* center profile image on small screens */
    .image-align {
        text-align: center;
    }

    .row {
        max-width: 400px; /* make smaller on smaller screens to keep text tight */
        margin: auto;
    }
    .column1 {
      width: 100%; /* make the photo and the text have their own row */
      padding-top: 10px; /* reduce padding on smaller screens */

      /* display: block; */
      /* margin-bottom: 20px; */
    }

    .column2 {
        width: 100%;
        padding-top: 20px;
    }

    .currently-section {
        padding-top: 50px;
        max-width: 400px;
        padding-left: 25px;
        padding-right: 25px;
    }

    .break-writing-block-header {
        display: block;
    }

    .card-header-secondary {
        padding-left: 25px;
    }

    .computerworld-logo {
        width: 300px;
    }
}

